@@ -1883,11 +1883,6 @@ webkit.org/b/182928 http/tests/cache-storage/cache-representation.https.html [ P
 
 webkit.org/b/116621 fast/replaced/preferred-widths.html [ Pass Failure ]
 
-webkit.org/b/182833 imported/w3c/web-platform-tests/2dcontext/imagebitmap/createImageBitmap-drawImage.html [ Skip ]
-webkit.org/b/182833 imported/w3c/web-platform-tests/2dcontext/imagebitmap/createImageBitmap-invalid-args.html [ Pass Failure ]
-webkit.org/b/182833 imported/w3c/web-platform-tests/2dcontext/imagebitmap/createImageBitmap-origin.sub.html [ Pass Failure ]
-webkit.org/b/182833 imported/w3c/web-platform-tests/2dcontext/imagebitmap/createImageBitmap-transfer.html [ Pass Failure ]
-
 webkit.org/b/184198 imported/w3c/web-platform-tests/html/browsers/offline/appcache/workers/appcache-worker.html [ Pass Failure ]
 
 webkit.org/b/184058 storage/indexeddb/dont-wedge-private.html [ Pass Failure ]
