@@ -32,7 +32,7 @@ PASS createImageBitmap with a an ImageBitmap source and sh set to 0
 FAIL createImageBitmap with a an ImageBitmap source and oversized (unallocatable) crop region assert_unreached: Should have rejected: undefined Reached unreachable code
 PASS createImageBitmap with a a Blob source and sw set to 0 
 PASS createImageBitmap with a a Blob source and sh set to 0 
-FAIL createImageBitmap with a a Blob source and oversized (unallocatable) crop region assert_throws: function "function () { throw e }" threw object "TypeError: createImageBitmap with ArrayBuffer or Blob is not implemented" ("TypeError") expected object "InvalidStateError" ("InvalidStateError")
+FAIL createImageBitmap with a a Blob source and oversized (unallocatable) crop region assert_unreached: Should have rejected: undefined Reached unreachable code
 PASS createImageBitmap with undefined image source. 
 PASS createImageBitmap with null image source. 
 PASS createImageBitmap with CanvasRenderingContext2D image source. 
@@ -43,7 +43,7 @@ PASS createImageBitmap with empty image source.
 PASS createImageBitmap with empty video source. 
 PASS createImageBitmap with an oversized canvas source. 
 FAIL createImageBitmap with an invalid OffscreenCanvas source. assert_throws: function "function () { throw e }" threw object "TypeError: Type error" that is not a DOMException InvalidStateError: property "code" is equal to undefined, expected 11
-FAIL createImageBitmap with an undecodable blob source. assert_throws: function "function () { throw e }" threw object "TypeError: createImageBitmap with ArrayBuffer or Blob is not implemented" that is not a DOMException InvalidStateError: property "code" is equal to undefined, expected 11
+PASS createImageBitmap with an undecodable blob source. 
 PASS createImageBitmap with a broken image source. 
 FAIL createImageBitmap with an available but undecodable image source. assert_unreached: Should have rejected: undefined Reached unreachable code
 FAIL createImageBitmap with an available but zero height image source. assert_unreached: Should have rejected: undefined Reached unreachable code
